--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,10 @@
 
 <body>
 
-  <div id="output"></div>
+  <div id="output">
+      TODO: for each card, let all text layers be edited, and doll layer be loaded from text area.<br>
+
+  </div>
 
 </body>
 </html>
