--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-  Copyright (c) 2017, jenny. All rights reserved. Use of this source code
+  Copyright (c) 2017, JR. All rights reserved. Use of this source code
   is governed by a BSD-style license that can be found in the LICENSE file.
 -->
 
