--- a/web/index.html
+++ b/web/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-
-  <div id="output">
+<div id = "navbar"></div>
+  <div id="contents" class="whiteCenterThingy">
   </div>
 
 </body>
