you gotta flip it turnways

--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -11,7 +11,14 @@
 <body>
 <div id = "navbar"></div>
 <div id="contents" class="whiteCenterThingy">
+    <audio id = "audio" controls loop autoplay>
+        <source src="../music/bg.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio><br>
     TODO: Flip p2 turnways. Make all sprites try to render "at bottom. Music. Animations. Fight options.
 </div>
+
+
+
 </body>
 </html>
