--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -11,7 +11,8 @@
 <body>
 <div id = "navbar"></div>
 <div id="contents" class="whiteCenterThingy">
-    <audio id = "audio" controls loop autoplay>
+    <audio id = "audio" controls loop>
+        <source src="../music/bg.ogg" type="audio/ogg">
         <source src="../music/bg.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio><br>
