--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="../css/styles.css">
     <script defer src="scripts/main.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>
+    <script src="../packages/browser/dart.js"></script>
+
 </head>
 <body>
 <div id = "navbar"></div>
@@ -16,7 +17,7 @@
         <source src="../music/bg.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: Flip p2 turnways. Make all sprites try to render "at bottom. Music. Animations. Fight options.
+    TODO: Fight options with animations.
 </div>
 
 
