--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -17,7 +17,7 @@
         <source src="../music/bg.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: Fight options with animations.
+    TODO: Attack Text. HP. Power. Dad fights back. More attack options. Ending. Attack/Defend sounds. Not dads. Fraymotifs.
 </div>
 
 
