ready for next kind of attack

--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -18,6 +18,8 @@
         Your browser does not support the audio element.
     </audio><br>
     TODO: Attack Text. HP. Power. Dad fights back. More attack options. Ending. Attack/Defend sounds. Not dads. Fraymotifs.
+    <div class="label">Strife!</div>
+
 </div>
 
 
