--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -12,9 +12,13 @@
 <body>
 <div id = "navbar"></div>
 <div id="contents" class="whiteCenterThingy">
-    <audio id = "audio" controls loop>
+    <audio id = "bgAudio" controls loop>
         <source src="../music/bg.ogg" type="audio/ogg">
         <source src="../music/bg.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <audio id = "fxAudio" >
+        <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
     TODO: HP. Power. More attack options. Ending. Attack/Defend sounds. Not dads. Fraymotifs.
