--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -21,7 +21,7 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: HP. Power. More attack options. Ending. Attack/Defend sounds. Not dads. Fraymotifs.
+    TODO: HP. Power. Fraymotifs (rotate, bounce around, do shit to enemy, etc). Ending.  Not dads.
     <div class="label">Strife!</div>
 
 </div>
