--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -12,9 +12,8 @@
 <body>
 <div id = "navbar"></div>
 <div id="contents" class="whiteCenterThingy">
-    <audio id = "bgAudio" controls loop>
-        <source src="../music/bg.ogg" type="audio/ogg">
-        <source src="../music/bg.mp3" type="audio/mpeg">
+    <audio id = "bgAudio" controls>
+        <source src="../music/Showdads_Strifing_Part_1.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
     <audio id = "fxAudio" >
