deploy before hp and power and stuff

--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -20,7 +20,7 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: HP. Power. Fraymotifs (rotate, bounce around, do shit to enemy, etc). Ending.  Not dads.
+    TODO: HP. Power. Make it more obvious when a fraymotif is defended against. Ending.  Not dads.
     <div class="label">Strife!</div>
 
 </div>
