--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -20,7 +20,7 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: HP. Power. Make it more obvious when a fraymotif is defended against. Ending.  Not dads.
+    TODO: HP. Power. Mana. Earn mana by defending against an attack successfully. Make it more obvious when a fraymotif is defended against. Ending.  Not dads.
     <div class="label">Strife!</div>
 
 </div>
