--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -13,7 +13,7 @@
 <div id = "navbar"></div>
 <div id="contents" class="whiteCenterThingy">
     <audio id = "bgAudio" controls>
-        <source src="../music/Showdads_Strifing_Part_1.ogg" type="audio/ogg">
+        <source src="../music/bg.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
     <audio id = "fxAudio" >
