--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -20,7 +20,7 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: Fraymotifs do damage. Next enemy when defeated.  Lose state. Reward. No more idle playlist. Can do fraymotif with enough mana, not song status. Earn mana by defending against an attack successfully. Make it more obvious when a fraymotif is defended against. Ending.  Not dads.
+    TODO:Reward.  Make it more obvious when a fraymotif is defended against. Ending. 
     <div class="label">Strife!</div>
 
 </div>
