--- a/web/Strife/index.html
+++ b/web/Strife/index.html
@@ -20,7 +20,7 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO:Reward.  Make it more obvious when a fraymotif is defended against. Ending.
+    TODO:Reward.  Differnet attack animations for different enemies. Red miles. Ending.
     <div class="label">Strife!</div>
 
 </div>
