now to make it a secret

--- a/web/StrifeSim/index.html
+++ b/web/StrifeSim/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div id = "navbar"></div>
+
 <div id="contents" class="whiteCenterThingy">
     <audio id = "bgAudio" controls>
         <source src="../music/bg.ogg" type="audio/ogg">
@@ -22,6 +23,7 @@
     </audio><br>
     TODO:Reward. Clean up sound. (speed up when fraymotif is over? )  Differnet attack animations for different enemies. Red miles. Ending.
     <div class="label">Strife!</div>
+    <div id = 'strife'></div>
 
 </div>
 
