--- a/web/StrifeSim/index.html
+++ b/web/StrifeSim/index.html
@@ -21,7 +21,7 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO:Reward. Clean up sound. (speed up when fraymotif is over? )  Differnet attack animations for different enemies. Red miles. Ending.
+    TODO:Reward.  Differnet attack animations for different enemies. Red miles. Ending.
     <div class="label">Strife!</div>
     <div id = 'strife'></div>
 
