--- a/web/StrifeSim/index.html
+++ b/web/StrifeSim/index.html
@@ -13,6 +13,8 @@
 <div id = "navbar"></div>
 
 <div id="contents" class="whiteCenterThingy">
+    Programming: <a href = "https://jadedresearcher.tumblr.com/">jadedResearcher</a> and <a href = "http://paradoxlands.tumblr.com/">paradoxLands</a> Music: <a href = "https://manic---insomniac.tumblr.com/">manicInsomniac</a> Art: <a href = "http://www.farragofiction.com/DollSim/credits.html">Doll Sim Artists</a>
+<Br>
     <audio id = "bgAudio" controls>
         <source src="../music/bg.ogg" type="audio/ogg">
         Your browser does not support the audio element.
@@ -21,7 +23,6 @@
         <source src="../music/hit.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio><br>
-    TODO: Slurp items.
     <div class="label">Strife!</div>
     <div id = 'strife'></div>
 
