--- a/web/CardSim/index.html
+++ b/web/CardSim/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../favicon.ico">
     <script defer src="../scripts/main.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>
+    <script defer src="../packages/browser/dart.js"></script>
 </head>
 
 <body>
