--- a/web/index.html
+++ b/web/index.html
@@ -21,13 +21,16 @@
 <body>
 <div id = "navbar"></div>
 <div id="contents" class="whiteCenterThingy">
+    <div class = "spiel">
     Whoa. What's this?
-    <div id = "first"></div>
 
     It's like....some sort of ....random DOLL thing? These things are so freaking random!
-    <div id = "second"></div>It's like no human is involved in creating them at all.
-    <div id = "third"></div><a href = "http://farragofiction.com/DollSim/">You could do better than this. </a> You're suddenly sure of it.
-    <div id = "fourth"></div>
+    It's like no human is involved in creating them at all.
+    <a href = "http://farragofiction.com/DollSim/">You could do better than this. </a> You're suddenly sure of it.
+    </div><br>
+    <div class  = "spiel">You wonder if there are any <a target = "_blank" href = "http://farragofiction.com/DollSim/">GAMES</a> to play with these dolls?</div>
+    <br>
+
 </div>
 
 </body>
