--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
     It's like no human is involved in creating them at all.
     <a href = "http://farragofiction.com/DollSim/">You could do better than this. </a> You're suddenly sure of it.
     </div><br>
-    <div class  = "spiel">You wonder if there are any <a target = "_blank" href = "http://farragofiction.com/DollSim/">GAMES</a> to play with these dolls?</div>
+    <div class  = "spiel">You wonder if there are any <a target = "_blank" href = "http://farragofiction.com/WigglerSim/">GAMES</a> to play with these dolls?</div>
     <br>
 
 </div>
